syntax = "proto3";

package user.service.v1;

option go_package = "api/user/service/v1;v1";

service User {
  rpc auth(AuthReq) returns (AuthReply) {}
  rpc sendVerifyCode(SendVerifyCodeReq) returns (BoolReply) {}
  rpc getUser(GetUserReq) returns (GetUserReply) {}
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
}
message BoolReply { bool success = 1; }


message AuthReq { string mobile = 1; string code = 2;}
message AuthReply { UserInfo user = 1; string token = 2; }
message SendVerifyCodeReq { string key = 1; int64 biz_type = 2; }
message GetUserReq { int64 id = 1; }
message GetUserReply { UserInfo user = 1; }